<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:textSize="13sp"
        android:text="@string/apps_hint" />

    <RadioGroup
        android:id="@+id/mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/modeAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_all" />

        <RadioButton
            android:id="@+id/modeOnly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_only" />

        <RadioButton
            android:id="@+id/modeExcept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_except" />
    </RadioGroup>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="multipleChoice" />
</LinearLayout>
